# paste-rs

./: Cargo.toml  LICENSE  Makefile  README.md  config.toml
migrations/: 20210122191713_create_paste_table.sql
src/: config.rs  controllers.rs  db.rs  handler.rs  main.rs  note.rs  paste.rs  util.rs
src/config/: mod.rs
src/handlers/: mod.rs  note.rs
src/models/: note.rs
src/paste/: mod.rs
src/services/: note.rs
